--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>来一首唐诗吧</title>
 </head>
 <body>
-    <img src="背景图片.jpg"/>
-<p>   《静夜思》  </p>
+    <img src = "1.jpg"/>
+<p>  《静夜思》  </p>
 <p>  窗前明月光，   </p>
 <p>  疑是地上霜。   </p>
-<p>   举头望明月，  </p>
-<p>   低头思故乡。  </p>
+<p>  举头望明月，  </p>
+<p>  低头思故乡。  </p>
 </body>
 </html>
