--- a/1/text.html
+++ b/1/text.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>来一首唐诗吧</title>
+</head>
+<body>
+    <img src = "./image/1.jpg"/>
+<p>  《静夜思》  </p>
+<p>  窗前明月光，   </p>
+<p>  疑是地上霜。   </p>
+<p>  举头望明月，  </p>
+<p>  低头思故乡。  </p>
+</body>
+</html>
 
