--- a/1/text.html
+++ b/1/text.html
@@ -12,10 +12,17 @@
         html{
             height: 100%;
         }
+        @keyframes myfirst {
+            from {background:red;opacity: 0}
+            to {background:greenyellow;opacity: 100}
+        }
+        h,p{
+            animation: myfirst 3s infinite;
+        }
         </style>
 </head>
 <body>
-<p>  《静夜思》  </p>
+<h>  《静夜思》  </h>
 <p>  窗前明月光，   </p>
 <p>  疑是地上霜。   </p>
 <p>  举头望明月，  </p>
