--- a/1/text.html
+++ b/1/text.html
@@ -22,6 +22,8 @@
         </style>
 </head>
 <body>
+<audio src="AU/bgm.wav" controls="controls" autoplay="autoplay">
+</audio>
 <h>  《静夜思》  </h>
 <p>  窗前明月光，   </p>
 <p>  疑是地上霜。   </p>
