--- a/1/page.html
+++ b/1/page.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>四季交替动画效果</title>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+    <link rel="StyleSheet" type="text/css" href="css/StyleSheet.css"/>
+    <style type="text/css">
+
+    </style>
+
 </head>
 <body>
 <page id="c">春</page>
