--- a/1/page.html
+++ b/1/page.html
@@ -5,14 +5,15 @@
     <title>四季交替动画效果</title>
     <link rel="StyleSheet" type="text/css" href="css/StyleSheet.css"/>
     <style type="text/css">
-
     </style>
-
 </head>
 <body>
 <page id="c">春</page>
 <page id="x">夏</page>
 <page id="q">秋</page>
-<page id="d">冬</page>
+<page id="d">
+    冬
+    <spand id="z">贞下起元</spand>>
+</page>
 </body>
 </html>
